--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 .form-container {
     width: 400px;
-    margin: 0 auto;
+    margin: auto;
     text-align: center;
+    padding: 80px;
+    background: #23463f;
+    border-radius: 15px;
   }
 
   form {
@@ -20,6 +23,26 @@
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+
+  input[type="email"], input[type="username"] {
+    width: 200px;
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  input[type="text"], input[type="password"] {
+    width: 200px;
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  
 
   input[type="submit"] {
     padding: 10px 20px;
